// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component API/List Compact 1`] = `
<div
  dir="ltr"
>
  <ul
    className="fd-list fd-list--compact"
  >
    <li
      className="fd-list__group-header"
    >
      List Header
    </li>
    <li
      aria-selected={false}
      className="fd-list__item"
      onClick={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="fd-list__title"
      >
        List Item 1
      </span>
    </li>
    <li
      aria-selected={false}
      className="fd-list__item"
      onClick={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="fd-list__title"
      >
        List Item 2
      </span>
    </li>
    <li
      aria-selected={false}
      className="fd-list__item"
      onClick={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="fd-list__title"
      >
        List Item 3
      </span>
    </li>
    <li
      aria-selected={false}
      className="fd-list__item"
      onClick={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="fd-list__title"
      >
        List Item 4
      </span>
    </li>
    <li
      className="fd-list__footer"
    >
      List Footer
    </li>
  </ul>
</div>
`;

exports[`Storyshots Component API/List Dev 1`] = `
<div
  dir="ltr"
>
  <ul
    className="fd-list"
  >
    <li
      className="fd-list__group-header"
    >
      List Header
    </li>
    <li
      aria-selected={false}
      className="fd-list__item"
      onClick={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="fd-list__icon sap-icon--accept"
      />
      <span
        className="fd-list__title"
      >
        List Item 1
      </span>
    </li>
    <li
      className="fd-list__footer"
    >
      List Footer
    </li>
  </ul>
</div>
`;

exports[`Storyshots Component API/List Icons Left 1`] = `
<div
  dir="ltr"
>
  <ul
    className="fd-list"
  >
    <li
      className="fd-list__group-header"
    >
      List Header
    </li>
    <li
      aria-selected={false}
      className="fd-list__item"
      onClick={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="fd-list__icon sap-icon--cart"
      />
      <span
        className="fd-list__title"
      >
        List Item 1
      </span>
    </li>
    <li
      aria-selected={false}
      className="fd-list__item"
      onClick={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="fd-list__icon sap-icon--wrench"
      />
      <span
        className="fd-list__title"
      >
        List Item 2
      </span>
    </li>
    <li
      aria-selected={false}
      className="fd-list__item"
      onClick={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="fd-list__icon sap-icon--lightbulb"
      />
      <span
        className="fd-list__title"
      >
        List Item 3
      </span>
    </li>
    <li
      aria-selected={false}
      className="fd-list__item"
      onClick={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="fd-list__icon sap-icon--history"
      />
      <span
        className="fd-list__title"
      >
        List Item 4
      </span>
    </li>
    <li
      className="fd-list__footer"
    >
      List Footer
    </li>
  </ul>
</div>
`;

exports[`Storyshots Component API/List Icons Right 1`] = `
<div
  dir="ltr"
>
  <ul
    className="fd-list"
  >
    <li
      className="fd-list__group-header"
    >
      List Header
    </li>
    <li
      aria-selected={false}
      className="fd-list__item"
      onClick={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="fd-list__title"
      >
        List Item 1
      </span>
      <span
        className="fd-list__icon sap-icon--navigation-right-arrow"
      />
    </li>
    <li
      aria-selected={false}
      className="fd-list__item"
      onClick={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="fd-list__title"
      >
        List Item 2
      </span>
      <span
        className="fd-list__icon sap-icon--navigation-right-arrow"
      />
    </li>
    <li
      aria-selected={false}
      className="fd-list__item"
      onClick={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="fd-list__title"
      >
        List Item 3
      </span>
      <span
        className="fd-list__icon sap-icon--navigation-right-arrow"
      />
    </li>
    <li
      aria-selected={false}
      className="fd-list__item"
      onClick={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="fd-list__title"
      >
        List Item 4
      </span>
      <span
        className="fd-list__icon sap-icon--navigation-right-arrow"
      />
    </li>
    <li
      className="fd-list__footer"
    >
      List Footer
    </li>
  </ul>
</div>
`;

exports[`Storyshots Component API/List Secondary Text 1`] = `
<div
  dir="ltr"
>
  <ul
    className="fd-list"
  >
    <li
      className="fd-list__group-header"
    >
      List Header
    </li>
    <li
      aria-selected={false}
      className="fd-list__item"
      onClick={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="fd-list__title"
      >
        List Item 1
      </span>
      <span
        className="fd-list__secondary"
      >
        Positive
      </span>
    </li>
    <li
      aria-selected={false}
      className="fd-list__item"
      onClick={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="fd-list__title"
      >
        List Item 2
      </span>
      <span
        className="fd-list__secondary"
      >
        Negative
      </span>
    </li>
    <li
      aria-selected={false}
      className="fd-list__item"
      onClick={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="fd-list__title"
      >
        List Item 3
      </span>
      <span
        className="fd-list__secondary"
      >
        Positive
      </span>
    </li>
    <li
      aria-selected={false}
      className="fd-list__item"
      onClick={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="fd-list__title"
      >
        List Item 4
      </span>
      <span
        className="fd-list__secondary"
      >
        Negative
      </span>
    </li>
    <li
      className="fd-list__footer"
    >
      List Footer
    </li>
  </ul>
</div>
`;

exports[`Storyshots Component API/List Simple List 1`] = `
<div
  dir="ltr"
>
  <ul
    className="fd-list"
  >
    <li
      aria-selected={false}
      className="fd-list__item"
      onClick={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="fd-list__title"
      >
        List Item 1
      </span>
    </li>
    <li
      aria-selected={true}
      className="fd-list__item is-selected"
      onClick={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="fd-list__title"
      >
        List Item 2
      </span>
    </li>
    <li
      aria-selected={false}
      className="fd-list__item"
      onClick={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="fd-list__title"
      >
        List Item 3
      </span>
    </li>
    <li
      aria-selected={false}
      className="fd-list__item"
      onClick={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="fd-list__title"
      >
        List Item 4
      </span>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Component API/List with Header and Footer 1`] = `
<div
  dir="ltr"
>
  <ul
    className="fd-list"
  >
    <li
      className="fd-list__group-header"
    >
      List Header
    </li>
    <li
      aria-selected={false}
      className="fd-list__item"
      onClick={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="fd-list__title"
      >
        List Item 1
      </span>
    </li>
    <li
      aria-selected={false}
      className="fd-list__item"
      onClick={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="fd-list__title"
      >
        List Item 2
      </span>
    </li>
    <li
      aria-selected={false}
      className="fd-list__item"
      onClick={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="fd-list__title"
      >
        List Item 3
      </span>
    </li>
    <li
      aria-selected={false}
      className="fd-list__item"
      onClick={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="fd-list__title"
      >
        List Item 4
      </span>
    </li>
    <li
      className="fd-list__footer"
    >
      List Footer
    </li>
  </ul>
</div>
`;

exports[`Storyshots Component API/List with no borders 1`] = `
<div
  dir="ltr"
>
  <ul
    className="fd-list fd-list--no-border"
  >
    <li
      className="fd-list__group-header"
    >
      List Header
    </li>
    <li
      aria-selected={false}
      className="fd-list__item"
      onClick={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="fd-list__title"
      >
        List Item 1
      </span>
    </li>
    <li
      aria-selected={false}
      className="fd-list__item"
      onClick={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="fd-list__title"
      >
        List Item 2
      </span>
    </li>
    <li
      aria-selected={false}
      className="fd-list__item"
      onClick={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="fd-list__title"
      >
        List Item 3
      </span>
    </li>
    <li
      aria-selected={false}
      className="fd-list__item"
      onClick={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="fd-list__title"
      >
        List Item 4
      </span>
    </li>
    <li
      className="fd-list__footer"
    >
      List Footer
    </li>
  </ul>
</div>
`;
